--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,9 +11,9 @@
     <div class="profile-group__col">
       <p class="profile-group__col__item">苦手な家事ジャンル：<%= @user.weaknesses_genre.name %></p>
       <% if @user.current_room.nil? %>
-        <p class="profile-group__col__item">マイルーム：未登録</p>
+        <p class="profile-group__col__item">最近入室したルーム：なし</p>
       <% else %>
-        <p class="profile-group__col__item">マイルーム：<%= @user.current_room.name %></p>
+        <p class="profile-group__col__item">最近入室したルーム：<%= @user.current_room.name %></p>
       <% end %>
       <%= link_to "編集", edit_user_path, class: "profile-group__col__btn" %>
     </div>
