--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -17,7 +17,8 @@
 
 .chat-container {
   width: auto;
-  height: 350px;
+  height: 300px;
+  overflow: auto;
   background-color: $thema-color1;
   padding: 1rem 0.5rem;
   position: relative;
@@ -60,13 +61,10 @@
 
 .chat-form-container {
   width: 300px;
-  height: 3rem;
+  height: 50px;
   text-align: center;
   background-color: $base-color1;
   padding: 0.5rem;
-  position: fixed;
-  right: 0;
-  bottom: 150px;
 
   &__field-line {
     text-align: center;
