--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -1,8 +1,13 @@
 <div class="form-wrapper">
   <%= form_with model: task, local: true do |f| %>
-    <% Genre.all.each do |genre| %>
+    <!--先頭にchecked: trueをつける-->
+    <% Genre.all.each_with_index do |genre, number| %>
     <div class="form-wrapper__form-group">
-      <%= f.radio_button :genre_id, genre.id  %>
+      <% if number == 0 %>
+        <%= f.radio_button :genre_id, genre.id, checked: true %>
+      <% else %>
+        <%= f.radio_button :genre_id, genre.id %>
+      <% end %>
       <%= f.label :genre_id, genre.name, value: genre.id %>
     </div>
     <% end %>
@@ -15,10 +20,10 @@
       <div class="form-wrapper__form-group__label"><%= f.label :body, "タスクの内容" %></div>
       <div class="form-wrapper__form-group__field"><%= f.text_area :body %></div>
     </div>
-    <!--<div class="form-wrapper__form-group">-->
-    <!--  <%= f.check_box :template_task, {}, true, false %>-->
-    <!--  <%= f.label :template_task, "テンプレートとして保存する" %>-->
-    <!--</div>-->
+    <div class="form-wrapper__form-group">
+      <%= f.check_box :template_task, {}, true, false %>
+      <%= f.label :template_task, "テンプレートとして保存する" %>
+    </div>
     <div class="form-wrapper__form-group">
       <%= f.submit button_text, class: "form-wrapper__form-group__btn" %>
     </div>
