--- a/app/views/tasks/_genre-card.html.erb
+++ b/app/views/tasks/_genre-card.html.erb
@@ -45,7 +45,7 @@
       <%= f.radio_button :genre_id, 6, class: "radio-button"  %>
       <div class="radio-tile">
         <div><%= image_tag 'genres/ホームのフリーアイコン素材.png', class: "genre-image" %></div>
-        <label for="その他" class="radio-tile-label">洗濯</label>
+        <label for="その他" class="radio-tile-label">その他</label>
       </div>
     </div>
 
@@ -53,7 +53,7 @@
       <%= f.radio_button :genre_id, 7, class: "radio-button"  %>
       <div class="radio-tile">
         <div><%= image_tag 'genres/人物アイコン.png', class: "genre-image" %></div>
-        <label for="個人" class="radio-tile-label">洗濯</label>
+        <label for="個人" class="radio-tile-label">個人</label>
       </div>
     </div>
 
